[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "dardama_diffusion2d"
version = "0.0.1"
description = "A simple 2D diffusion solver using finite-difference methods."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Megha Darda", email = "meghardarda@gmail.com"}
]
keywords = ["diffusion", "PDE", "numerical methods", "heat equation"]
urls = {Source = "https://github.com/Simulation-Software-Engineering/diffusion2D"}
license-files = ["LICENSE"]
dependencies = [
    "numpy",
    "matplotlib"
]

[tool.setuptools]
packages = ["dardama_diffusion2d"]